# CMak-Executable-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ]
cmake/modules/: CPackConfig.cmake
project/: CMakeLists.txt  Main.cpp
project/include/: CMakeLists.txt
project/src/: CMakeLists.txt  hello.cpp
